Adding the login page.. to be continued..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.HeavyEquipmentManager">
         <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+        <activity
             android:name=".NotificationsActivity"
             android:exported="true" />
         <activity
